Refactor bot and guild fields to private
Changed visibility of userID and several Guild fields in AsyncTI4DiscordBot from public to private to improve encapsulation and restrict direct access.