@@ -1,6 +1,10 @@
 package ti4.helpers;
 
-import static org.apache.commons.lang3.StringUtils.*;
+import static org.apache.commons.lang3.StringUtils.countMatches;
+import static org.apache.commons.lang3.StringUtils.isNotBlank;
+import static org.apache.commons.lang3.StringUtils.removeEnd;
+import static org.apache.commons.lang3.StringUtils.substringAfter;
+import static org.apache.commons.lang3.StringUtils.substringBetween;
 
 import java.util.ArrayList;
 import java.util.Arrays;
@@ -916,7 +920,7 @@ public class ButtonHelper {
         return buttons;
     }
 
-    public static void resolveTACheck(Game game, Player player) {
+    private static void resolveTACheck(Game game, Player player) {
         for (Player p2 : game.getRealPlayers()) {
             if (p2.getFaction().equalsIgnoreCase(player.getFaction())
                     || player.getAllianceMembers().contains((p2.getFaction()))) {
@@ -1022,7 +1026,7 @@ public class ButtonHelper {
         if ("yes".equalsIgnoreCase(game.getStoredValue("lawsDisabled"))) {
             return false;
         }
-        return Arrays.asList(lawIDs).stream().anyMatch(lawID -> game.getLaws().containsKey(lawID));
+        return Arrays.stream(lawIDs).anyMatch(lawID -> game.getLaws().containsKey(lawID));
     }
 
     public static boolean isPlayerElected(Game game, Player player, String lawID) {
@@ -2151,7 +2155,7 @@ public class ButtonHelper {
         return count;
     }
 
-    public static int checkValuesOfNonFighterShips(Player player, Tile tile) {
+    private static int checkValuesOfNonFighterShips(Player player, Tile tile) {
         int count = 0;
         UnitHolder space = tile.getUnitHolders().get("space");
         for (UnitKey unit : space.getUnitKeys()) {
@@ -2434,7 +2438,7 @@ public class ButtonHelper {
         return planetsWithUnit;
     }
 
-    public static void doButtonsForSleepers(Player player, Game game, Tile tile, ButtonInteractionEvent event) {
+    private static void doButtonsForSleepers(Player player, Game game, Tile tile, ButtonInteractionEvent event) {
         String finChecker = "FFCC_" + player.getFaction() + "_";
         if (!player.hasAbility("awaken")) {
             return;
@@ -2456,7 +2460,7 @@ public class ButtonHelper {
         }
     }
 
-    public static List<Button> getButtonsForTurningPDSIntoFS(Player player, Game game, Tile tile) {
+    private static List<Button> getButtonsForTurningPDSIntoFS(Player player, Game game, Tile tile) {
         String finChecker = "FFCC_" + player.getFaction() + "_";
         List<Button> planetsWithPDS = new ArrayList<>();
         if (!(player.hasUnit("titans_flagship")
@@ -3257,9 +3261,10 @@ public class ButtonHelper {
         }
         for (UnitHolder capChecker : tile.getUnitHolders().values()) {
             Map<UnitModel, Integer> unitsByQuantity = getAllUnits(capChecker, player);
-            for (UnitModel unit : unitsByQuantity.keySet()) {
+            for (Map.Entry<UnitModel, Integer> entry : unitsByQuantity.entrySet()) {
+                UnitModel unit = entry.getKey();
                 if ("space".equalsIgnoreCase(capChecker.getName())) {
-                    capacity += unit.getCapacityValue() * unitsByQuantity.get(unit);
+                    capacity += unit.getCapacityValue() * entry.getValue();
                 }
                 // System.out.println(unit.getBaseType());
                 if ("spacedock".equalsIgnoreCase(unit.getBaseType())
@@ -3294,9 +3299,10 @@ public class ButtonHelper {
             for (Player p2 : game.getRealPlayers()) {
                 if (player.getAllianceMembers().contains(p2.getFaction())) {
                     Map<UnitModel, Integer> unitsByQuantity2 = getAllUnits(capChecker, p2);
-                    for (UnitModel unit : unitsByQuantity2.keySet()) {
+                    for (Map.Entry<UnitModel, Integer> entry : unitsByQuantity2.entrySet()) {
+                        UnitModel unit = entry.getKey();
                         if ("space".equalsIgnoreCase(capChecker.getName())) {
-                            capacity += unit.getCapacityValue() * unitsByQuantity2.get(unit);
+                            capacity += unit.getCapacityValue() * entry.getValue();
                         }
                         // System.out.println(unit.getBaseType());
                         if ("spacedock".equalsIgnoreCase(unit.getBaseType())
@@ -3321,35 +3327,36 @@ public class ButtonHelper {
         UnitHolder spaceHolder = tile.getSpaceUnitHolder();
         List<String> unitTypesCounted = new ArrayList<>();
         Map<UnitModel, Integer> unitsByQuantity = getAllUnits(spaceHolder, player);
-        for (UnitModel unit : unitsByQuantity.keySet()) {
+        for (Map.Entry<UnitModel, Integer> entry : unitsByQuantity.entrySet()) {
+            UnitModel unit = entry.getKey();
             if (!unitTypesCounted.contains(unit.getBaseType())) {
                 if ("fighter".equalsIgnoreCase(unit.getBaseType())
                         || "infantry".equalsIgnoreCase(unit.getBaseType())
                         || "mech".equalsIgnoreCase(unit.getBaseType())) {
                     if ("fighter".equalsIgnoreCase(unit.getBaseType()) && player.hasFF2Tech()) {
-                        numFighter2s += unitsByQuantity.get(unit) - fightersIgnored;
+                        numFighter2s += entry.getValue() - fightersIgnored;
                         if (numFighter2s < 0) {
                             numFighter2s = 0;
                         }
                     }
                     if ("fighter".equalsIgnoreCase(unit.getBaseType())) {
-                        ignoredFs = Math.min(fightersIgnored, unitsByQuantity.get(unit));
-                        int numCountedFighters = unit.getCapacityUsed() * unitsByQuantity.get(unit) - fightersIgnored;
+                        ignoredFs = Math.min(fightersIgnored, entry.getValue());
+                        int numCountedFighters = unit.getCapacityUsed() * entry.getValue() - fightersIgnored;
                         if (numCountedFighters < 0) {
                             numCountedFighters = 0;
                         }
                         numInfNFightersNMechs += numCountedFighters;
                     } else {
-                        numInfNFightersNMechs += unit.getCapacityUsed() * unitsByQuantity.get(unit);
+                        numInfNFightersNMechs += unit.getCapacityUsed() * entry.getValue();
                     }
-                    if (unitsByQuantity.get(unit) > 0) {
+                    if (entry.getValue() > 0) {
                         unitTypesCounted.add(unit.getBaseType());
                     }
                 } else if (unit.getIsShip()) {
                     if (player.hasAbility("capital_fleet") && unit.getBaseType().contains("destroyer")) {
-                        numOfCapitalShips += unitsByQuantity.get(unit);
+                        numOfCapitalShips += entry.getValue();
                     } else {
-                        numOfCapitalShips += unitsByQuantity.get(unit) * 2;
+                        numOfCapitalShips += entry.getValue() * 2;
                     }
                     unitTypesCounted.add(unit.getBaseType());
                 }
@@ -3364,7 +3371,7 @@ public class ButtonHelper {
                 && player == game.getActivePlayer()) {
             capacity += 2;
         }
-        int ageOfFightersFleet = 0;
+        int ageOfFightersFleet;
         if (game.isAgeOfFightersMode()) {
             if (player.hasTech("hcf2")) {
                 ageOfFightersFleet = Math.min(numFighter2s, fleetCap - numOfCapitalShips);
@@ -3495,7 +3502,7 @@ public class ButtonHelper {
         return capNCap2;
     }
 
-    public static List<String> getAllPlanetsAdjacentToTileNotOwnedByPlayer(Tile tile, Game game, Player player) {
+    private static List<String> getAllPlanetsAdjacentToTileNotOwnedByPlayer(Tile tile, Game game, Player player) {
         List<String> planets = new ArrayList<>();
         for (String pos2 : FoWHelper.getAdjacentTiles(game, tile.getPosition(), player, false)) {
             Tile tile2 = game.getTileByPosition(pos2);
@@ -3967,7 +3974,7 @@ public class ButtonHelper {
                 List<MiltyDraftTile> tileToPullFromUnshuffled = new ArrayList<>(unusedBlueTiles);
                 Collections.shuffle(unusedBlueTiles);
 
-                if (unusedBlueTiles.size() < 1) {
+                if (unusedBlueTiles.isEmpty()) {
                     MessageHelper.sendMessageToChannel(event.getMessageChannel(), "Not enough tiles to draw from.");
                     return;
                 }
@@ -3975,7 +3982,7 @@ public class ButtonHelper {
                 List<MessageEmbed> tileEmbeds = new ArrayList<>();
                 List<String> ids = new ArrayList<>();
 
-                Tile tile = unusedBlueTiles.get(0).getTile();
+                Tile tile = unusedBlueTiles.getFirst().getTile();
                 TileModel tileModel = tile.getTileModel();
                 tileEmbeds.add(tileModel.getRepresentationEmbed(false));
                 ids.add(tile.getTileID());
@@ -3997,7 +4004,7 @@ public class ButtonHelper {
                 List<String> tileToPullFromUnshuffled = new ArrayList<>(redTilesToPullFrom);
                 Collections.shuffle(redTilesToPullFrom);
 
-                if (redTilesToPullFrom.size() < 1) {
+                if (redTilesToPullFrom.isEmpty()) {
                     MessageHelper.sendMessageToChannel(event.getMessageChannel(), "Not enough tiles to draw from.");
                     return;
                 }
@@ -4005,7 +4012,7 @@ public class ButtonHelper {
                 List<MessageEmbed> tileEmbeds = new ArrayList<>();
                 List<String> ids = new ArrayList<>();
 
-                String tileID = redTilesToPullFrom.get(0);
+                String tileID = redTilesToPullFrom.getFirst();
                 ids.add(tileID);
                 TileModel tile = TileHelper.getTileById(tileID);
                 tileEmbeds.add(tile.getRepresentationEmbed(false));
@@ -4298,7 +4305,7 @@ public class ButtonHelper {
             String coatlHS = "Coatl HS";
             int coatlControlID = game.getRevealedPublicObjectives().get(coatlControl);
             int coatlHSID = game.getRevealedPublicObjectives().get(coatlHS);
-            boolean scored = false;
+            boolean scored;
             for (Player p2 : game.getRealPlayers()) {
                 if (p2.getHomeSystemTile() == cTile) {
                     scored = game.scorePublicObjective(p2.getUserID(), coatlHSID);
@@ -4365,7 +4372,7 @@ public class ButtonHelper {
                     if (nokar.unitBelongsToPlayer(key)
                             && nokar.getUnitFromUnitKey(key).getIsShip()) {
                         int amt = space.getUnitCount(key);
-                        RemoveUnitService.removeUnit(event, tile, game, nokar, space, key.getUnitType(), amt);
+                        RemoveUnitService.removeUnit(event, tile, game, nokar, space, key.unitType(), amt);
                         AddUnitService.addUnits(event, tile, game, player.getColor(), amt + " " + key.asyncID());
                     }
                 }
@@ -4765,7 +4772,7 @@ public class ButtonHelper {
         return getPlanetExplorationButtons(game, planet, player, false);
     }
 
-    public static List<Button> getPlanetExplorationButtons(
+    private static List<Button> getPlanetExplorationButtons(
             Game game, Planet planet, Player player, boolean impressment) {
         if (planet == null || game == null) return null;
 
@@ -4870,7 +4877,7 @@ public class ButtonHelper {
         return getTilesWithPredicateForAction(player, game, action, hasPlayerUnits, includeDelete);
     }
 
-    public static List<Button> getTilesWithShipsForAction(
+    private static List<Button> getTilesWithShipsForAction(
             Player player, Game game, String action, boolean includeDelete) {
         Predicate<Tile> hasPlayerShips =
                 tile -> tile.containsPlayersUnitsWithModelCondition(player, UnitModel::getIsShip);
@@ -4882,7 +4889,7 @@ public class ButtonHelper {
         return getTilesWithPredicateForAction(player, game, action, tRue, includeDelete);
     }
 
-    public static List<Button> getTilesWithUnitsForModifyUnitsButton(
+    private static List<Button> getTilesWithUnitsForModifyUnitsButton(
             Player player, Game game, String action, boolean includeDelete) {
         Predicate<Tile> hasPlayerUnits = tile -> tile.containsPlayersUnits(player);
         List<Button> buttons = new ArrayList<>(16);
@@ -4939,7 +4946,7 @@ public class ButtonHelper {
         resolveCombatRoll(player, game, event, buttonID, true);
     }
 
-    public static void resolveCombatRoll(
+    private static void resolveCombatRoll(
             Player player, Game game, GenericInteractionCreateEvent event, String buttonID, boolean first) {
         if (player == game.getActivePlayer()
                 && !game.getStoredValue("hiredGunsInPlay").isEmpty()) {
@@ -5269,7 +5276,7 @@ public class ButtonHelper {
         return buildUnitPickButton(player, action, idSuffix, tile, uh, state, unitKey, x, labelStart, color);
     }
 
-    public static Button buildRepairUnitButton(
+    private static Button buildRepairUnitButton(
             Player player, Tile tile, UnitHolder uh, UnitState state, UnitKey unitKey, int x) {
         String action = "repairDamage";
         String labelStart = "Repair";
@@ -5285,7 +5292,7 @@ public class ButtonHelper {
         return buildUnitPickButton(player, action, null, tile, uh, state, unitKey, x, labelStart, color);
     }
 
-    public static Button buildRemoveButton(
+    private static Button buildRemoveButton(
             Player player, Tile tile, UnitHolder uh, UnitState state, UnitKey unitKey, int x) {
         String action = "assignHits";
         String labelStart = "Remove";
@@ -5307,7 +5314,7 @@ public class ButtonHelper {
         // label parts
         String labelStart = labelAction;
         String stateStr = state != UnitState.none ? state.humanDescr() + " " : "";
-        String unitName = key.getUnitType().humanReadableName();
+        String unitName = key.unitType().humanReadableName();
         String planetName = (uh instanceof Planet p)
                 ? " from " + Helper.getPlanetRepresentationNoResInf(p.getName(), player.getGame())
                 : "";
@@ -5329,7 +5336,6 @@ public class ButtonHelper {
         String buttonID = String.join("_", idParts);
 
         return switch (style) {
-            case green -> Buttons.green(buttonID, buttonLabel, key.unitEmoji());
             case blue -> Buttons.blue(buttonID, buttonLabel, key.unitEmoji());
             case gray -> Buttons.gray(buttonID, buttonLabel, key.unitEmoji());
             case red -> Buttons.red(buttonID, buttonLabel, key.unitEmoji());
@@ -5347,7 +5353,7 @@ public class ButtonHelper {
         return buttons;
     }
 
-    public static List<Button> getButtonsForRemovingAllUnitsInSystem(
+    private static List<Button> getButtonsForRemovingAllUnitsInSystem(
             Player player, Game game, Tile tile, String type, boolean limitOne) {
         List<Button> buttons = new ArrayList<>();
         game.setStoredValue(player.getFaction() + "latestAssignHits", type);
@@ -5376,12 +5382,12 @@ public class ButtonHelper {
                 if (unitModel == null) continue;
                 if ("assaultcannoncombat".equalsIgnoreCase(type)
                         && List.of(UnitType.Fighter, UnitType.Spacedock, UnitType.Mech, UnitType.Infantry)
-                                .contains(unitKey.getUnitType())) {
+                                .contains(unitKey.unitType())) {
                     continue;
                 }
                 if ("courageouscombat".equalsIgnoreCase(type)
                         && List.of(UnitType.Spacedock, UnitType.Mech, UnitType.Infantry)
-                                .contains(unitKey.getUnitType())) {
+                                .contains(unitKey.unitType())) {
                     continue;
                 }
 
@@ -5663,7 +5669,8 @@ public class ButtonHelper {
         deleteMessage(event);
     }
 
-    public static List<Button> getButtonsForRollingThalnos(Player player, Game game, Tile tile, UnitHolder unitHolder) {
+    private static List<Button> getButtonsForRollingThalnos(
+            Player player, Game game, Tile tile, UnitHolder unitHolder) {
         String finChecker = "FFCC_" + player.getFaction() + "_";
         List<Button> buttons = new ArrayList<>();
         Map<UnitKey, Integer> units = unitHolder.getUnits();
@@ -5741,7 +5748,7 @@ public class ButtonHelper {
         return buttons;
     }
 
-    public static List<Button> getUserSetupButtons(Game game) {
+    private static List<Button> getUserSetupButtons(Game game) {
         List<Button> buttons = new ArrayList<>();
         for (Player player : game.getPlayers().values()) {
             String userId = player.getUserID();
@@ -5785,7 +5792,7 @@ public class ButtonHelper {
                         + " You may wish to personalize yours with `/franken set_faction_icon`. You may use any emoji the bot may use.");
     }
 
-    public static List<Button> getFactionSetupButtons(Game game, String buttonID) {
+    private static List<Button> getFactionSetupButtons(Game game, String buttonID) {
         String userId = buttonID.split("_")[1];
         List<Button> buttons = new ArrayList<>();
         List<FactionModel> factionsOnMap = Mapper.getFactionsValues().stream()
@@ -5831,7 +5838,7 @@ public class ButtonHelper {
         }
     }
 
-    public static List<Button> getColorSetupButtons(Game game, String buttonID) {
+    private static List<Button> getColorSetupButtons(Game game, String buttonID) {
         List<Button> buttons = new ArrayList<>();
         String userId = buttonID.split("_")[1];
         String factionId = buttonID.split("_")[2];
@@ -6074,7 +6081,7 @@ public class ButtonHelper {
                 event.getMessageChannel(), "Please tell the bot the desired player color.", newButtons);
     }
 
-    public static List<Button> getSpeakerSetupButtons(String buttonID) {
+    private static List<Button> getSpeakerSetupButtons(String buttonID) {
         List<Button> buttons = new ArrayList<>();
         String userId = buttonID.split("_")[1];
         String factionId = buttonID.split("_")[2];
@@ -6139,7 +6146,7 @@ public class ButtonHelper {
 
     @ButtonHandler("setupStep4_")
     @ButtonHandler("setupStep5_")
-    public static void resolveSetupStep4And5(Game game, ButtonInteractionEvent event, String buttonID) {
+    private static void resolveSetupStep4And5(Game game, ButtonInteractionEvent event, String buttonID) {
         String userId = buttonID.split("_")[1];
         String factionId = buttonID.split("_")[2];
         String color = buttonID.split("_")[3];
@@ -6387,7 +6394,7 @@ public class ButtonHelper {
 
                     UnitKey unitKey = unitEntry.getKey();
                     Player owningPlayer =
-                            game.getPlayerByColorID(unitKey.getColorID()).orElse(null);
+                            game.getPlayerByColorID(unitKey.colorID()).orElse(null);
                     if (owningPlayer == null
                             || playersWithPds2.contains(owningPlayer)
                             || !FoWHelper.getAdjacentTiles(game, tilePos, owningPlayer, false, true)
@@ -6440,7 +6447,7 @@ public class ButtonHelper {
 
                     UnitKey unitKey = unitEntry.getKey();
                     Player owningPlayer =
-                            game.getPlayerByColorID(unitKey.getColorID()).orElse(null);
+                            game.getPlayerByColorID(unitKey.colorID()).orElse(null);
                     if (owningPlayer == null || owningPlayer == player) {
                         continue;
                     }
@@ -6885,7 +6892,6 @@ public class ButtonHelper {
             Player player, Game game, ButtonInteractionEvent event, String buttonID) {
         String messageID = buttonID.split("_")[1];
         String msg = player.getFactionEmoji() + " successfully removed the preset for " + messageID + ".";
-        String part2 = player.getFaction();
         MessageHelper.sendMessageToChannel(event.getMessageChannel(), msg);
         if (game.getStoredValue(messageID) != null) {
             if (messageID.toLowerCase().contains("abstain")) {
@@ -6951,7 +6957,10 @@ public class ButtonHelper {
         }
         if (production) {
             if (player.hasTech("st")) {
-                youCanSpend.append(" You also have " + TechEmojis.CyberneticTech + "_Sarween Tools_.");
+                youCanSpend
+                        .append(" You also have ")
+                        .append(TechEmojis.CyberneticTech)
+                        .append("_Sarween Tools_.");
                 resourcesAvailable += 1;
             }
             if (player.hasTechReady("aida")) {
@@ -6980,7 +6989,7 @@ public class ButtonHelper {
         Collections.addAll(unitTypes, type);
 
         return game.getTileMap().values().stream()
-                .filter(t -> t.containsPlayersUnitsWithKeyCondition(p1, unit -> unitTypes.contains(unit.getUnitType())))
+                .filter(t -> t.containsPlayersUnitsWithKeyCondition(p1, unit -> unitTypes.contains(unit.unitType())))
                 .toList();
     }
 
@@ -7009,7 +7018,7 @@ public class ButtonHelper {
                 .sum();
     }
 
-    public static int getNumberOfUnitsOnTheBoard(Game game, UnitKey unitKey, boolean countPrison) {
+    private static int getNumberOfUnitsOnTheBoard(Game game, UnitKey unitKey, boolean countPrison) {
         List<UnitHolder> unitHolders = new ArrayList<>(game.getTileMap().values().stream()
                 .flatMap(t -> t.getUnitHolders().values().stream())
                 .toList());
@@ -7193,8 +7202,8 @@ public class ButtonHelper {
         return count;
     }
 
-    public static void purge2StarCharters(Player player) {
-        List<String> relics = new ArrayList<>(player.getRelics());
+    static void purge2StarCharters(Player player) {
+        var relics = new ArrayList<String>(player.getRelics());
         int count = 0;
         for (String relic : relics) {
             if (relic.contains("starchart") && count < 2) {
@@ -7204,7 +7213,7 @@ public class ButtonHelper {
         }
     }
 
-    public static void offerSpeakerButtons(Game game, Player player) {
+    public static void offerSpeakerButtons(Game game) {
         String assignSpeakerMessage =
                 "__Before__ you draw your action cards or look at agendas, please click a faction below to assign the Speaker token"
                         + MiscEmojis.SpeakerToken + ".";
@@ -7227,7 +7236,7 @@ public class ButtonHelper {
         return assignSpeakerButtons;
     }
 
-    public static Map<UnitModel, Integer> getAllUnits(UnitHolder unitHolder, Player player) {
+    private static Map<UnitModel, Integer> getAllUnits(UnitHolder unitHolder, Player player) {
         String colorID = Mapper.getColorID(player.getColor());
         Map<String, Integer> unitsByAsyncId = unitHolder.getUnitAsyncIdsOnHolder(colorID);
         Map<UnitModel, Integer> unitsInCombat = unitsByAsyncId.entrySet().stream()
@@ -7235,12 +7244,12 @@ public class ButtonHelper {
                         .map(x -> new ImmutablePair<>(x, entry.getValue())))
                 .collect(Collectors.toMap(Pair::getLeft, Pair::getRight));
 
-        HashMap<UnitModel, Integer> output;
+        Map<UnitModel, Integer> output;
 
         output = new HashMap<>(
                 unitsInCombat.entrySet().stream().collect(Collectors.toMap(Map.Entry::getKey, Map.Entry::getValue)));
 
-        Set<String> duplicates = new HashSet<>();
+        var duplicates = new HashSet<String>();
         List<String> dupes = output.keySet().stream()
                 .filter(unit -> !duplicates.add(unit.getAsyncId()))
                 .map(UnitModel::getBaseType)
@@ -7257,7 +7266,7 @@ public class ButtonHelper {
     }
 
     @ButtonHandler("autoProveEndurance_")
-    public static void autoProveEndurance(Player player, Game game, ButtonInteractionEvent event, String buttonID) {
+    public static void autoProveEndurance(Player player, Game game, String buttonID) {
         game.setStoredValue("autoProveEndurance_" + player.getFaction(), buttonID.split("_")[1]);
     }
 }
